INTEGRATION: CWS qadev13 (1.3.2); FILE MERGED 2003/11/07 14:55:03 sg 1.3.2.2: #113007#CHG: fixed expensive constructor bug 2003/11/07 13:48:05 sg 1.3.2.1: #113007#CHG: fixed expensive constructor bug